# juromind

./: .env  .gitignore  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml
backend/: Dockerfile  manage.py  project.json  pyproject.toml
backend/apps/documents/: models.py  serializers.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py
backend/apps/users/: models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
backend/core/: asgi.py  settings.py  urls.py
backend/documents/: 2025-01-31-Humeniuk_Oleksandr_2025-01.docx
frontend/: eslint.config.mjs  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/app/: app.tsx
frontend/src/app/components/: Layout.tsx  ProtectedRoute.tsx
frontend/src/app/features/auth/api/: auth.api.ts
frontend/src/app/features/auth/slice/: auth.slice.ts
frontend/src/app/features/auth/types/: index.ts
frontend/src/app/features/documents/api/: documents.api.ts
frontend/src/app/features/documents/slice/: documents.slice.ts
frontend/src/app/features/documents/types/: index.ts
frontend/src/app/pages/: DocumentsPage.tsx  HomePage.tsx
frontend/src/app/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/app/routes/: index.tsx
frontend/src/app/store/: index.ts  store.ts
frontend/src/app/store/services/: auth.ts
frontend/src/app/types/: document.types.ts
